--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,12 @@
             android:layout_width="208dp"
             android:layout_height="198dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
+            android:foregroundGravity="center"
             android:src="@drawable/ic_doctor"
             app:civ_border_color="#DAEEFF"
             app:civ_border_width="3dp"
-            android:foregroundGravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.443"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +118,21 @@
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_registrar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/border"
+            android:text="Registar"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/btn_agendar"
+            app:layout_constraintTop_toBottomOf="@+id/btn_agendar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
