--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -134,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
                     android:gravity="start"
-                    android:text="Apellido:"
+                    android:text="Correo:"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
